# satellite_comm-rust

./: Cargo.toml
sat_firmware/: Cargo.toml  README.md  build.rs  memory.x
sat_firmware/.cargo/: config.toml
sat_firmware/src/: main.rs
satellite_simulation/: Cargo.toml
satellite_simulation/src/: common.rs  main.rs
satellite_simulation/src/routing/: heuristics.rs  pathfinding.rs
satellite_simulation/src/security/: encryption.rs  signature.rs
satellite_simulation/src/simulation/: cgr.rs  graph.rs  mod.rs  network.rs  satellite.rs  tracking.rs
src/: main.rs
src/security/: README.md  encryption.rs  key_exchange.rs  mod.rs  secure_comm.rs
src/simulation/: mod.rs  satellite.rs
stm32_firmware/: Cargo.toml  README.md  build.rs  memory.x
stm32_firmware_v1/: Cargo.toml
stm32_firmware_v1/src/: main.rs
