[package]
name = "satcom_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.28", features = ["derive", "cargo"]}
rand = "0.8"
uuid = {version = "1.3", features = ["v4"]}
tokio-macros = "2.4"
tokio = { version = "1.43.0", features = ["rt-multi-thread", "macros"]}
chacha20poly1305 = "0.10.1"
