[package]
name = "sat_firmware"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
embedded-hal = "0.2"
stm32l4xx-hal = { version = "0.7.1", features = ["rt", "stm32l475"]}
nb = "1"
panic-halt = "0.2"
heapless = "0.7"

[profile.release]
codegen-units = 1
debug = true
lto = true
opt-level = "s"

[profile.dev]
debug = true
opt-level = 0