[package]
name = "satellite_simulation"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.28", features = ["derive", "cargo"]}
rand = "0.8"
uuid = {version = "1.3", features = ["v4"]}
tokio-macros = "2.4"
tokio = { version = "1.43.0", features = ["rt-multi-thread", "macros", "io-std", "io-util", "sync"]}
chacha20poly1305 = "0.10.1"
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
x25519-dalek = {version = "2.0.1", features=["static_secrets"]}
base64 = "0.22.1"
blake2 = "0.10.6"
tokio-serial = "5.4"